paragraf text visibility fixed, columns height fixed section margin edited iframe elements edited

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body {
 .section {
 	position: relative;
 	max-width: 1100px;
-	margin-block: 5vh;
+	margin-block: 15vh;
 	margin-inline: auto;
 	padding-inline: var(--size-500);
 }
@@ -157,7 +157,6 @@ body {
 }
 .even-columns > * {
 	width: 50%;
-	aspect-ratio: 1;
 }
 @media (max-width: 42em) {
 	.section:nth-child(even) > .even-columns {
@@ -605,6 +604,9 @@ iframe {
 	font-size: var(--fs-900);
 }
 
+.padding-600 {
+	padding: var(--size-600);
+}
 .padding-block-900 {
 	padding-block: var(--size-900);
 }
@@ -642,9 +644,6 @@ iframe {
 .margin-top-900 {
 	margin-block-start: var(--size-900);
 }
-.margin-top-10vh {
-	margin-block-start: 10vh;
-}
 
 .flow * + * {
 	margin-top: var(--flow-spacer, 2rem);
@@ -679,6 +678,10 @@ iframe {
 	justify-content: center;
 	align-items: center;
 	gap: var(--size-500);
+}
+
+.aspect-ratio-1 {
+	aspect-ratio: 1;
 }
 
 .shadow-900 {
